# UTFPR/Web/web2-hotel/backend/routers/api/usuarioRestaurante.js
@@ -3,8 +3,13 @@ const router = express.Router();
 const controller = require("../../controllers/api/usuarioRestaurante");
 const auth = require("../../middlewares/authToken");
 
-router.post("/vincular", auth.verificarToken, controller.vincular);
-router.post("/desvincular", auth.verificarToken, controller.desvincular);
 router.get("/", auth.verificarToken, controller.listar);
+router.post("/", auth.verificarToken, controller.vincular);
+router.put("/:usuarioId", auth.verificarToken, controller.atualizarVinculos);
+router.delete(
+  "/:usuarioId/:restauranteId",
+  auth.verificarToken,
+  controller.desvincular
+);
 
 module.exports = router;
